--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h1>Hello, I'm Kirin Danek</h1>
-    <p>Software Engineer · Developer · Tech Enthusiast</p>
+    <h1>Kirin Danek</h1>
+    <p>Researcher · Developer · ML Enthusiast</p>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -117,11 +117,10 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm Kirin Danek, a passionate developer and open-source enthusiast.
-        With a background in software engineering, I love to design and build 
-        solutions that solve real-world problems. My experiences range from 
-        working on front-end web applications to developing complex back-end 
-        services.
+        I'm Kirin Danek, a passionate researcher and current undergraduate at
+        Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
+        My research areas are data science and ML for causal inference, computer vision, and LLM performance.
+        I'm currently taking a semester abroad at DIS Copenhagen in Denmark, where I'm studying Complex Networks.
       </p>
       <p>
         I am constantly learning new technologies and staying up-to-date with 
@@ -137,48 +136,32 @@
       <div class="projects-list">
         <!-- Project One -->
         <div class="project">
-          <h3>Project One: Dev Blog</h3>
+          <h3>Project One: Proxy Finder </h3>
           <p>
-            A developer-focused blogging platform where users can write, share, 
-            and discuss their coding journeys. Built with React, Node.js, and 
-            GraphQL.
+           A data-driven causal inference method for identifying proxy for missing 
+            variable in political science datasets. Built in Python with pandas,
+            PyTorch.
           </p>
           <p>
             <a href="https://github.com/yourusername/dev-blog" target="_blank">
-              View on GitHub
+              Github releasing soon!
             </a>
           </p>
         </div>
 
         <!-- Project Two -->
         <div class="project">
-          <h3>Project Two: Data Analytics Dashboard</h3>
+          <h3>Project Two: TextBot</h3>
           <p>
-            An interactive dashboard that visualizes complex data sets. 
-            Utilizes Python (Pandas, NumPy) for data processing and D3.js 
-            for stunning data visualizations.
+           Chatbot fine-tuned to sound exactly like me! Built in Python using LLaMA-Factory, Pytorch.
           </p>
           <p>
             <a href="https://github.com/yourusername/data-analytics-dashboard" target="_blank">
-              View on GitHub
+              Github releasing soon!
             </a>
           </p>
         </div>
 
-        <!-- Project Three -->
-        <div class="project">
-          <h3>Project Three: IoT Home Automation</h3>
-          <p>
-            A home automation system that allows users to monitor and control 
-            appliances via a web interface and a mobile app. Built with 
-            Raspberry Pi, Python, and a custom API.
-          </p>
-          <p>
-            <a href="https://github.com/yourusername/iot-home-automation" target="_blank">
-              View on GitHub
-            </a>
-          </p>
-        </div>
       </div>
     </section>
 
@@ -186,10 +169,9 @@
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li><strong>Languages:</strong> JavaScript, Python, C++, Java</li>
-        <li><strong>Frameworks & Libraries:</strong> React, Node.js, Django, Flask</li>
-        <li><strong>Tools & Platforms:</strong> Git, Docker, AWS, GitHub Actions</li>
-        <li><strong>Other:</strong> Agile Methodologies, Test-driven Development</li>
+        <li><strong>Languages:</strong> Java, Python (Pandas, PyTorch, TensorFlow), C/C++, Golang, Rust, R, SQL</li>
+        <li><strong>Tools & Platforms:</strong> Git/GitHub, Unix/Linux (bash scripting), Stata, VScode, JetBrains platforms, Emacs, Vim</li>
+        <li><strong>Interests:</strong> Deep Learning, Fine Tuning, Computer Vision, Algorithms, Causal Inference, Probability, Statistics, Optimization</li>
       </ul>
     </section>
 
@@ -201,8 +183,8 @@
         opportunities to be part of your vision. Feel free to reach out!
       </p>
       <p>
-        Email: <a href="mailto:kirin.danek@example.com">kirin.danek@example.com</a><br/>
-        GitHub: <a href="https://github.com/Kirin-Danek" target="_blank">Kirin-Danek</a>
+        Email: <a href="mailto:kirin@useunix.com">kirin@useunix.com</a><br/>
+        GitHub: <a href="https://github.com/Kirin2D2" target="_blank">Kirin2D2</a>
       </p>
     </section>
   </main>
@@ -211,9 +193,8 @@
   <footer>
     <p>&copy; <span id="year"></span> Kirin Danek. All Rights Reserved.</p>
     <div class="social-links">
-      <a href="https://github.com/Kirin-Danek" target="_blank">GitHub</a> |
-      <a href="https://www.linkedin.com/in/kirin-danek" target="_blank">LinkedIn</a> 
-      <!-- Add more social or professional links if you'd like -->
+      <a href="https://github.com/Kirin2D2" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/kirindanek" target="_blank">LinkedIn</a> 
     </div>
   </footer>
 
