--- a/index.html
+++ b/index.html
@@ -117,16 +117,17 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm Kirin Danek, a passionate researcher and current undergraduate at
+        Hi! I'm Kirin Danek, a researcher and current undergraduate at
         Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
-        My research areas are data science and ML for causal inference, computer vision, and LLM performance.
-        I'm currently taking a semester abroad at DIS Copenhagen in Denmark, where I'm studying Complex Networks.
+        My research areas are data science and ML for causal inference, combinatorial optimization,
+        explainable AI, and graph deep learning.
+        I'm currently taking a semester abroad at DIS Copenhagen in Denmark, where I'm studying Artificial Intelligence
+        and completing my Princeton Junior Independent Work under prof. Pedro Paredes.
       </p>
       <p>
-        I am constantly learning new technologies and staying up-to-date with 
-        the latest industry trends. Outside of coding, you’ll find me exploring 
-        new coffee spots, dabbling in machine learning projects, or contributing 
-        to community hackathons. 
+        I am constantly reading papers and staying up-to-date with 
+        the latest industry trends. Outside of research, you’ll find me practicing my
+        piano, playing ice hockey, or working on fun ML projects.
       </p>
     </section>
 
@@ -173,7 +174,8 @@
       <ul>
         <li><strong>Languages:</strong> Java, Python (Pandas, PyTorch, TensorFlow), C/C++, Golang, Rust, R, SQL</li>
         <li><strong>Tools & Platforms:</strong> Git/GitHub, Unix/Linux (bash scripting), Stata, VScode, JetBrains platforms, Emacs, Vim</li>
-        <li><strong>Interests:</strong> Deep Learning, Fine Tuning, Computer Vision, Algorithms, Causal Inference, Probability, Statistics, Optimization</li>
+        <li><strong>Interests:</strong> Causal Inference, Missing Data, Graph Deep Learning, Explainable AI, Algorithms, Combinatorial
+Optimization, Probability, Statistics</li>
       </ul>
     </section>
 
