--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
       <a href="#contact">Contact</a>
+      <a href="cv.pdf" target="_blank">CV</a>
     </nav>
   </header>
 
