--- a/index.html
+++ b/index.html
@@ -1,104 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Personal portfolio of Kirin Danek" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Personal portfolio of Kirin Danek">
   <title>Kirin Danek | Portfolio</title>
 
-  <!-- Favicon (optional) -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <!-- Example Fonts (Google Fonts) -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link 
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" 
-    rel="stylesheet" 
-  />
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <style>
-    /* Minimal reset and styling */
+    /* Global Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
-      font-family: 'Montserrat', sans-serif;
-      line-height: 1.6;
-      background: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background: #2b2b2b;
+      font-family: 'Poppins', sans-serif;
+      background: #121212;
       color: #fff;
-      padding: 2rem;
+    }
+
+    /* Header */
+    header {
+      background: linear-gradient(135deg, #ff6b6b, #556270);
+      padding: 3rem;
       text-align: center;
+      border-bottom: 3px solid #ff9f43;
+      box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
     }
+
     header h1 {
-      margin-bottom: 0.5rem;
+      font-size: 2.5rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
+
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.9;
+    }
+
+    /* Navigation */
     nav {
       margin-top: 1rem;
     }
+
     nav a {
       color: #fff;
       text-decoration: none;
-      margin: 0 0.5rem;
+      margin: 0 1rem;
       font-weight: 600;
+      transition: all 0.3s ease-in-out;
     }
+
     nav a:hover {
-      text-decoration: underline;
+      color: #ff9f43;
     }
+
+    /* Main Sections */
     main {
-      max-width: 900px;
-      margin: 2rem auto;
+      max-width: 1000px;
+      margin: 3rem auto;
       padding: 0 1rem;
     }
+
     section {
       margin-bottom: 3rem;
     }
+
     section h2 {
-      margin-bottom: 1rem;
-      font-size: 1.75rem;
-      border-bottom: 2px solid #ccc;
+      font-size: 2rem;
+      border-bottom: 3px solid #ff9f43;
       display: inline-block;
       padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }
-    .projects-list {
+
+    /* About Section with Profile Picture */
+    .about-container {
       display: flex;
-      flex-wrap: wrap;
+      align-items: center;
+      gap: 2rem;
+    }
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      object-fit: cover;
+    }
+
+    /* Project Cards */
+    .projects-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1rem;
     }
+
     .project {
-      flex: 1 1 300px;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 5px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.1);
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s ease-in-out;
     }
-    .project h3 {
-      margin-bottom: 0.5rem;
+
+    .project:hover {
+      transform: scale(1.05);
     }
-    footer {
-      text-align: center;
-      padding: 1rem 0;
-      background: #2b2b2b;
-      color: #fff;
-      margin-top: 2rem;
-    }
-    .social-links a {
-      margin: 0 0.5rem;
-      color: #fff;
+
+    .project a {
+      color: #ff9f43;
       text-decoration: none;
       font-weight: 600;
     }
-    .social-links a:hover {
+
+    .project a:hover {
       text-decoration: underline;
+    }
+
+    /* Contact Section */
+    .contact-links a {
+      display: inline-block;
+      margin: 0.5rem;
+      font-size: 1.5rem;
+      color: #ff9f43;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .contact-links a:hover {
+      transform: scale(1.2);
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      background: linear-gradient(135deg, #556270, #ff6b6b);
+      margin-top: 3rem;
     }
   </style>
 </head>
 <body>
+
   <!-- HEADER -->
   <header>
     <h1>Kirin Danek</h1>
@@ -117,14 +170,13 @@
     <!-- ABOUT SECTION -->
     <section id="about">
       <h2>About Me</h2>
-      <p>
-        Hi! I'm Kirin Danek, a researcher and current undergraduate at
-        Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
-        My research areas are data science and ML for causal inference, combinatorial optimization,
-        explainable AI, and graph deep learning.
-        I'm currently taking a semester abroad at DIS Copenhagen in Denmark, where I'm studying Artificial Intelligence
-        and completing my Princeton Junior Independent Work under prof. Pedro Paredes.
-      </p>
+      <div class="about-container">
+        <img src="profile.jpg" alt="Kirin Danek" class="profile-img">
+        <p>
+          Hi! I'm Kirin Danek, a researcher and current undergraduate at
+          Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
+        </p>
+      </div>
       <p>
         I am constantly reading papers and staying up-to-date with 
         the latest industry trends. Outside of research, you’ll find me practicing my
@@ -136,75 +188,52 @@
     <section id="projects">
       <h2>Projects</h2>
       <div class="projects-list">
-        <!-- Project One -->
         <div class="project">
-          <h3>Project One: Proxy Finder </h3>
-          <p>
-           A data-driven causal inference method for identifying proxy for missing 
-            variable in political science datasets. Built in Python with pandas,
-            PyTorch.
-          </p>
-          <p>
-            <a href="https://github.com/yourusername/dev-blog" target="_blank">
-              Github releasing soon!
-            </a>
-          </p>
+          <h3>Proxy Finder</h3>
+          <p>A data-driven causal inference method using Python and PyTorch.</p>
+          <p><a href="#">GitHub (Coming Soon)</a></p>
         </div>
         <div class="project">
           <h3>multiClassCNN</h3>
-          <p>Deep learning-based image classifier using CNNs for multi-class classification.</p>
-          <p><a href="https://github.com/Kirin2D2/multiClassCNN" target="_blank">GitHub Repository</a></p>
+          <p>Deep learning-based image classifier.</p>
+          <p><a href="#">GitHub</a></p>
         </div>
         <div class="project">
           <h3>K-Means</h3>
-          <p>Implementation of K-Means clustering algorithm with various distance metrics and use cases.</p>
-          <p><a href="https://github.com/Kirin2D2/K-Means-K-MeansPlus" target="_blank">GitHub Repository</a></p>
+          <p>Custom implementation of K-Means clustering.</p>
+          <p><a href="#">GitHub</a></p>
         </div>
         <div class="project">
           <h3>LoRMA</h3>
-          <p>Low-rank matrix approximation for dimensionality reduction and efficiency in ML.</p>
-          <p><a href="https://github.com/Kirin2D2/LoRMA" target="_blank">GitHub Repository</a></p>
+          <p>Low-rank matrix approximation for ML efficiency.</p>
+          <p><a href="#">GitHub</a></p>
         </div>
-
       </div>
     </section>
 
     <!-- SKILLS SECTION -->
     <section id="skills">
       <h2>Skills</h2>
-      <ul>
-        <li><strong>Languages:</strong> Java, Python (Pandas, PyTorch, TensorFlow), C/C++, Golang, Rust, R, SQL</li>
-        <li><strong>Tools & Platforms:</strong> Git/GitHub, Unix/Linux (bash scripting), Stata, VScode, JetBrains platforms, Emacs, Vim</li>
-        <li><strong>Interests:</strong> Causal Inference, Missing Data, Graph Deep Learning, Explainable AI, Algorithms, Combinatorial
-Optimization, Probability, Statistics</li>
-      </ul>
+      <p><strong>Languages:</strong> Python, Java, C++, Rust</p>
+      <p><strong>Tools:</strong> Git, Linux, PyTorch, TensorFlow</p>
+      <p><strong>Fields:</strong> ML, Causal Inference, Explainable AI</p>
     </section>
 
     <!-- CONTACT SECTION -->
     <section id="contact">
       <h2>Contact</h2>
-      <p>
-        I'm always open to discussing new projects, creative ideas, or 
-        opportunities to be part of your vision. Feel free to reach out!
-      </p>
-      <p>
-        Email: <a href="mailto:kirin@useunix.com">kirin@useunix.com</a><br/>
-        GitHub: <a href="https://github.com/Kirin2D2" target="_blank">Kirin2D2</a>
-      </p>
+      <p>Email: <a href="mailto:kirin@useunix.com">kirin@useunix.com</a></p>
+      <div class="contact-links">
+        <a href="https://github.com/Kirin2D2" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/kirindanek" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer>
-    <div class="social-links">
-      <a href="https://github.com/Kirin2D2" target="_blank">GitHub</a> |
-      <a href="https://www.linkedin.com/in/kirindanek" target="_blank">LinkedIn</a> 
-    </div>
+    <p>© 2024 Kirin Danek</p>
   </footer>
 
-  <script>
-    // Dynamically update the year in the footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
