--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@
         <div class="project">
           <h3>multiClassCNN</h3>
           <p>Deep learning-based image classifier.</p>
-          <p><a href="#">GitHub</a></p>
+          <p><a href="https://github.com/Kirin2D2/multiClassCNN">GitHub</a></p>
         </div>
         <div class="project">
           <h3>K-Means</h3>
           <p>Custom implementation of K-Means clustering.</p>
-          <p><a href="#">GitHub</a></p>
+          <p><a href="https://github.com/Kirin2D2/K-Means-K-MeansPlus">GitHub</a></p>
         </div>
         <div class="project">
           <h3>LoRMA</h3>
           <p>Low-rank matrix approximation for ML efficiency.</p>
-          <p><a href="#">GitHub</a></p>
+          <p><a href="https://github.com/Kirin2D2/LoRMA">GitHub</a></p>
         </div>
       </div>
     </section>
