--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
     <!-- SKILLS SECTION -->
     <section id="skills">
       <h2>Skills</h2>
-      <p><strong>Languages:</strong> Python, Java, C++, Rust</p>
-      <p><strong>Tools:</strong> Git, Linux, PyTorch, TensorFlow</p>
-      <p><strong>Fields:</strong> ML, Causal Inference, Explainable AI</p>
+      <p><strong>Languages:</strong> Java, Python (Pandas, PyTorch, TensorFlow), C/C++, Golang, Rust, R, SQL</p>
+      <p><strong>Tools:</strong> Git/GitHub, Unix/Linux (bash scripting), LATEX, Stata, VScode, JetBrains platforms, Emacs</p>
+      <p><strong>Interests:</strong> Causal Inference, Missing Data, Graph Deep Learning, Explainable AI, Algorithms, Combinatorial
+Optimization, Probability, Statistics</p>
     </section>
 
     <!-- CONTACT SECTION -->
