--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
         <p>
           Hi! I'm Kirin Danek, a researcher and current undergraduate at
           Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
+          Right now, I'm taking a semester abroad with DIS Copenhagen, where I'm studying Artificial Intelligence 
+          and Complex Networks, and completing my Princeton University Junior Independent Wor, advised by
+          Pedro Paredes.
         </p>
       </div>
       <p>
