--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
         <img src="profile.jpg" alt="Kirin Danek" class="profile-img">
         <p>
           Hi! I'm Kirin Danek, a researcher and current undergraduate at
-          Princeton University. I'm studying Computer Science with a minor in Statistics and Machine Learning.
+          <a href="https://www.cs.princeton.edu/">Princeton University</a>. I'm studying Computer Science with a minor in Statistics and Machine Learning.
           Right now, I'm taking a semester abroad with DIS Copenhagen, where I'm studying Artificial Intelligence 
-          and Complex Networks, and completing my Princeton University Junior Independent Wor, advised by
-          Pedro Paredes.
+          and Complex Networks, and completing my Princeton University Junior Independent Work, advised by
+          <a href="https://www.cs.princeton.edu/~pparedes/">Pedro Paredes</a></p>
         </p>
       </div>
       <p>
