--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="project">
           <h3>Proxy Finder</h3>
           <p>A data-driven causal inference method using Python and PyTorch.</p>
-          <p><a href="#">GitHub (Coming Soon)</a></p>
+          <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub</a></p>
         </div>
         <div class="project">
           <h3>multiClassCNN</h3>
