--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Kirin Danek",
+    "url": "https://kirin2d2.github.io",
+    "sameAs": [
+      "https://github.com/kirin2d2",
+      "https://www.linkedin.com/in/kirindanek"
+    ]
+  }
+  </script>
 
   <style>
     /* Global Reset */
