--- a/index.html
+++ b/index.html
@@ -190,15 +190,14 @@
           Hi! I'm Kirin Danek, a researcher and current undergraduate at
           <a href="https://www.cs.princeton.edu/" style="color: #ff9900;">Princeton University</a>
 . I'm studying Computer Science with a minor in Statistics and Machine Learning.
-          Right now, I'm taking a semester abroad with DIS Copenhagen, where I'm studying Artificial Intelligence 
-          and Complex Networks. I'm also completing my Princeton University Junior Independent Work, advised by
+          Right now, I'm researching AI Explainability and Efficiency in the Ramaswamy Lab, advised by Drs. <a href="https://www.cs.princeton.edu/~vr23/" style="color: #ff9900;">Vikram Ramaswamy</a> and 
           <a href="https://www.cs.princeton.edu/~pparedes/" style="color: #ff9900;">Pedro Paredes</a></p>
         </p>
       </div>
       <p>
         I am constantly reading papers and staying up-to-date with 
-        the latest industry trends. Outside of research, you’ll find me practicing my
-        piano, playing ice hockey, or working on fun ML projects.
+        the latest developments in AIML. Outside of research, you’ll find me practicing my
+        piano, playing ice hockey, or working on fun projects.
       </p>
     </section>
 
@@ -209,7 +208,7 @@
         <div class="project">
           <h3>Proxy Finder</h3>
           <p>A data-driven causal inference method using Python and PyTorch.</p>
-          <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub</a></p>
+          <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub (down awaiting paper publication)</a></p>
         </div>
         <div class="project">
           <h3>multiClassCNN</h3>
@@ -232,10 +231,10 @@
     <!-- SKILLS SECTION -->
     <section id="skills">
       <h2>Skills</h2>
-      <p><strong>Languages:</strong> Java, Python (Pandas, PyTorch, TensorFlow), C/C++, Golang, Rust, R, SQL</p>
-      <p><strong>Tools:</strong> Git/GitHub, Unix/Linux (bash scripting), LATEX, Stata, VScode, JetBrains platforms, Emacs</p>
-      <p><strong>Interests:</strong> Causal Inference, Missing Data, Graph Deep Learning, Explainable AI, Algorithms, Combinatorial
-Optimization, Probability, Statistics</p>
+      <p><strong>Languages:</strong> Python (Pandas, PyTorch, TensorFlow), Java, C/C++, Golang, Rust, R, SQL</p>
+      <p><strong>Tools:</strong> Git/GitHub, Unix/Linux (bash scripting), LATEX, Stata, VScode, JetBrains, Emacs</p>
+      <p><strong>Interests:</strong> AI Efficiency, Neural Network Compression, Explainable AI, Computational Social Science,
+Optimization, Algorithms, Probability, Statistics</p>
     </section>
 
     <!-- CONTACT SECTION -->
