--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     <p>Researcher · Developer · ML Enthusiast</p>
     <nav>
       <a href="#about">About</a>
+      <a href="#talks">Featured Presentation</a>
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
       <a href="#contact">Contact</a>
@@ -200,6 +201,28 @@
         piano, playing ice hockey, or working on fun projects.
       </p>
     </section>
+
+    <section id="talks">
+    <h2>Featured Talk: ProxyFinder, PRD 2025</h2>
+    
+    <!-- Begin embedded Kaltura player -->
+    <div class="video-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+      <iframe
+        id="kaltura_player"
+        type="text/javascript"
+        src="https://cdnapisec.kaltura.com/p/1449362/embedPlaykitJs/uiconf_id/56118542?iframeembed=true&entry_id=1_xt8cfs0b&config[provider]={'widgetId':'1_e87iw9pa'}"
+        style="border: 0; position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+        allowfullscreen
+        webkitallowfullscreen
+        mozAllowFullScreen
+        allow="autoplay *; fullscreen *; encrypted-media *"
+        sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+        title="Kaltura Player"
+      ></iframe>
+    </div>
+    <!-- End embedded Kaltura player -->
+    
+  </section>
 
     <!-- PROJECTS SECTION -->
     <section id="projects">
