--- a/index.html
+++ b/index.html
@@ -229,9 +229,14 @@
       <h2>Projects</h2>
       <div class="projects-list">
         <div class="project">
+          <h3>Network Concept Pruning</h3>
+          <p>CNN pruning via Concept-based XAI.</p>
+          <p><a href="https://github.com/Kirin2D2/NCP.v2">GitHub (coming soon!)</a></p>
+        </div>
+        <div class="project">
           <h3>Proxy Finder</h3>
-          <p>A data-driven causal inference method using Python and PyTorch.</p>
-          <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub (down awaiting paper publication)</a></p>
+          <p>Data inference method using Python and PyTorch.</p>
+          <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub (coming soon!)</a></p>
         </div>
         <div class="project">
           <h3>multiClassCNN</h3>
