--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@ Optimization, Algorithms, Probability, Statistics</p>
     <!-- CONTACT SECTION -->
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:kirin@useunix.com">kirin@useunix.com</a></p>
+      <p>Email: <a href="mailto:kirin@useunix.com" style="color: #ff9900;">kirin@useunix.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/kirindanek" style="color: #ff9900;">kirindanek</a></p>
+      <p>GitHub: <a href="https://github.com/Kirin2D2" style="color: #ff9900;">Kirin2D2</a></p>
       <div class="contact-links">
         <a href="https://github.com/Kirin2D2" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/kirindanek" target="_blank"><i class="fab fa-linkedin"></i></a>
