--- a/index.html
+++ b/index.html
@@ -230,27 +230,32 @@
       <div class="projects-list">
         <div class="project">
           <h3>Network Concept Pruning</h3>
-          <p>CNN pruning via Concept-based XAI.</p>
+          <p>CNN pruning via Concept-based XAI (Python).</p>
           <p><a href="https://github.com/Kirin2D2/NCP.v2">GitHub (coming soon!)</a></p>
         </div>
         <div class="project">
           <h3>Proxy Finder</h3>
-          <p>Data inference method using Python and PyTorch.</p>
+          <p> Computational socialogical method to select proxy for missing survey variable (Python).</p>
           <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub (coming soon!)</a></p>
         </div>
         <div class="project">
-          <h3>multiClassCNN</h3>
-          <p>Deep learning-based image classifier.</p>
-          <p><a href="https://github.com/Kirin2D2/multiClassCNN">GitHub</a></p>
+          <h3>Bitcoin Client</h3>
+          <p>From-scratch implementation of Bitcoin Client (Rust).</p>
+          <p><a href="https://github.com/Kirin2D2/BitcoinClient">GitHub</a></p>
+        </div>
+        <div class="project">
+          <h3>Fraud Detection</h3>
+          <p>Location-based predictions for fraudulent credit card transactions via weak decision stump and AdaBoost (Java). </p>
+          <p><a href="https://github.com/Kirin2D2/FraudDetection">GitHub</a></p>
         </div>
         <div class="project">
           <h3>K-Means</h3>
-          <p>Custom implementation of K-Means clustering.</p>
+          <p>Custom implementation of K-Means clustering (Python).</p>
           <p><a href="https://github.com/Kirin2D2/K-Means-K-MeansPlus">GitHub</a></p>
         </div>
         <div class="project">
           <h3>LoRMA</h3>
-          <p>Low-rank matrix approximation for ML efficiency.</p>
+          <p>Low-rank matrix approximation for ML efficiency (Python).</p>
           <p><a href="https://github.com/Kirin2D2/LoRMA">GitHub</a></p>
         </div>
       </div>
