--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
         <div class="project">
           <h3>Proxy Finder</h3>
-          <p> Computational socialogical method to select proxy for missing survey variable (Python).</p>
+          <p> Computational sociological method to select proxy for missing survey variable (Python).</p>
           <p><a href="https://github.com/Kirin2D2/ProxyFinder">GitHub (coming soon!)</a></p>
         </div>
         <div class="project">
