--- a/index.html
+++ b/index.html
@@ -191,14 +191,16 @@
           Hi! I'm Kirin Danek, a researcher and current undergraduate at
           <a href="https://www.cs.princeton.edu/" style="color: #ff9900;">Princeton University</a>
 . I'm studying Computer Science with a minor in Statistics and Machine Learning.
-          Right now, I'm researching AI Explainability and Efficiency in the Ramaswamy Lab, advised by Drs. <a href="https://www.cs.princeton.edu/~vr23/" style="color: #ff9900;">Vikram Ramaswamy</a> and 
+          Right now, I'm researching AI Explainability and Fairness in the Ramaswamy Lab, advised by Drs. <a href="https://www.cs.princeton.edu/~vr23/" style="color: #ff9900;">Vikram Ramaswamy</a> and 
           <a href="https://www.cs.princeton.edu/~pparedes/" style="color: #ff9900;">Pedro Paredes</a></p>
         </p>
       </div>
       <p>
         I am constantly reading papers and staying up-to-date with 
-        the latest developments in AIML. Outside of research, you’ll find me practicing my
-        piano, playing ice hockey, or working on fun projects.
+        the latest developments in AI/ML. Outside of research, you’ll find me practicing my
+        piano, playing ice hockey, or working on fun projects. This page is not kept up to date, 
+        so for more on my research, see my <a href="kirin2d2.github.io/cv.pdf" style="color: #ff9900;">CV</a> 
+        (updated December 2025).
       </p>
     </section>
 
