--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         I am constantly reading papers and staying up-to-date with 
         the latest developments in AI/ML. Outside of research, you’ll find me practicing my
         piano, playing ice hockey, or working on fun projects. This page is not kept up to date, 
-        so for more on my research, see my <a href="kirin2d2.github.io/cv.pdf" style="color: #ff9900;">CV</a> 
+        so for more on my research, see my <a href="https://kirin2d2.github.io/cv.pdf" style="color: #ff9900;">CV</a> 
         (updated December 2025).
       </p>
     </section>
