--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
       <h2>Skills</h2>
       <p><strong>Languages:</strong> Python (Pandas, PyTorch, TensorFlow), Java, C/C++, Golang, Rust, R, SQL</p>
       <p><strong>Tools:</strong> Git/GitHub, Unix/Linux (bash scripting), LATEX, Stata, VScode, JetBrains, Emacs</p>
-      <p><strong>Interests:</strong> AI Efficiency, Neural Network Compression, Explainable AI, Computational Social Science,
-Optimization, Algorithms, Probability, Statistics</p>
+      <p><strong>Interests:</strong> Explainable AI (XAI), Algorithmic Fairness, Human-Computer Interaction, Representation Learning, Computational Social Science</p>
     </section>
 
     <!-- CONTACT SECTION -->
